Further changes from QA for story 1.1

--- a/docs/stories/1.1.Project_Initialization.md
+++ b/docs/stories/1.1.Project_Initialization.md
@@ -1,7 +1,7 @@
 # Story 1.1: Project Initialization
 
 ## Status
-Draft
+Ready for Dev
 
 ## Story
 **As a** Super Admin/Developer,
@@ -84,9 +84,34 @@ This story establishes the foundational structure of the entire project based on
     - [ ] Add clear, concise instructions on how to set up and run the local development environment using `docker-compose up`.
 
 ## Testing
+
+This story's testing is critical to ensure the foundation of our project is stable. The following tests must be performed.
+
+### **Risk-Based Testing (Manual & Automated)**
+
+The following scenarios directly address the critical risks identified during the QA review. These must be successfully executed before the story can be considered complete.
+
+#### Priority 1: Critical Risk Tests
+*   **Scenario: Full Environment Startup**
+    *   **Action:** Run `docker-compose up -d --build`.
+    *   **Expected:** All 5 services (`db`, `redis`, `api`, `worker`, `web`) start without errors and are accessible.
+*   **Scenario: Frontend to Backend Communication**
+    *   **Action:** Access the web application in a browser and trigger an action that calls the backend API (e.g., fetch data from a placeholder `/health` endpoint).
+    *   **Expected:** The request is successfully proxied by Caddy to the `api` service, and a valid JSON response is returned.
+*   **Scenario: Database Persistence**
+    *   **Action:** Create data via an API endpoint, run `docker-compose down`, then `docker-compose up`.
+    *   **Expected:** The created data remains intact after the services restart.
+
+#### Priority 2: High Risk Tests
+*   **Scenario: Monorepo Workspace Resolution**
+    *   **Action:** Create a simple shared utility in `packages/` (e.g., a formatting function) and import it into both `apps/web` and `apps/api`.
+    *   **Expected:** The code is correctly resolved and utilized in both applications without build or runtime errors.
+
+### **Placeholder Unit & Integration Tests**
+
 *   **Backend:** Placeholder test files should be created in `apps/api/tests/` using `pytest`. For example, `apps/api/tests/test_main.py` that checks a basic `/` endpoint. [Source: `docs/architecture/16-testing-strategy.md`]
 *   **Frontend:** Placeholder test files should be created co-located with components in `apps/web/src/` using `vitest`. For example, `apps/web/src/App.test.tsx`. [Source: `docs/architecture/16-testing-strategy.md`]
-*   The CI pipeline should execute these placeholder tests.
+*   The CI pipeline must successfully execute all placeholder tests.
 
 ## QA Results
 
