feat: Refactor data models and update documentation
This commit introduces several improvements to the codebase:

- Refactors the `User` and `Role` data models to use `association_proxy` for many-to-many relationships, resolving ORM warnings and improving maintainability.
- Updates the `README.md` with detailed instructions for database setup, migrations, and the AI/ML worker environment.
- Removes the version number from `docker-compose.yml` for compatibility with newer Docker Compose versions.
- Updates the project documentation to reflect the data model refactoring.

--- a/docs/stories/1.2.Database_and_AI_Environment_Setup.md
+++ b/docs/stories/1.2.Database_and_AI_Environment_Setup.md
@@ -145,12 +145,12 @@ This story focuses on establishing the database schema and preparing the environ
 ### NFR & Operational Notes
 
 -   Security/Performance: No sensitive surface changes; migrations operate at deploy time only. No concerns.
--   Reliability: Repeated migrations validated; only benign SQLAlchemy overlap warnings observed, logged for future model tuning.
+-   Reliability: Repeated migrations validated; user↔role association proxies now execute without ORM warnings, confirming healthy mapper configuration.
 -   Maintainability: Structural assertions and ORM traversal guard against schema drift; residual risk low.
 
 ### Risks & Debt
 
--   No open risks; DATA-001 mitigations fully automated. Monitor SQLAlchemy overlap warnings in later model work.
+-   No open risks; DATA-001 mitigations fully automated. ORM overlap warning debt eliminated by association proxy refactor.
 
 ### Recommended Actions
 
